--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="app">
+<html lang="en" ng-app="SocaSlide">
 <head>
     <meta charset="UTF-8">
     <title>SocaSlide</title>
@@ -7,7 +7,7 @@
     <script src="js/main.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body ng-controller="first">
-    Slideshow for social network. {{1 + 1}}
+<body>
+    <div ng-include="'/modules/header/header.html'"></div>
 </body>
 </html>
