add some styles for header. Fix gulp tasks

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>SocaSlide</title>
+    <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css"/>
     <script src="js/main.js"></script>
     <script src="js/app.js"></script>
 </head>
 <body>
-    <div ng-include="'/modules/header/header.html'"></div>
+    <ng-include src="'/modules/header/header.html'"></ng-include>
 </body>
 </html>
