--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html lang="en" ng-app="SocaSlide">
+<html lang="en" ng-app="ss">
 <head>
     <meta charset="UTF-8">
     <title>SocaSlide</title>
     <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css"/>
+    <!--<script src="//vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>-->
+    <script src="js/fakeApi.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/app.js"></script>
 </head>
 <body>
     <ng-include src="'/modules/header/header.html'"></ng-include>
+    <ng-view></ng-view>
 </body>
 </html>
