--- a/modules/header/header.html
+++ b/modules/header/header.html
@@ -1,3 +1,3 @@
-<header class="header" layout="row" ng-controller="headerCtrl">
+<header class="header" layout="row" ng-controller="HeaderController">
     <a href="/" class="logo">SocaSlide</a>
 </header>
