Write tests on photoSelector controller. Add photoSrc filter and add tests for it.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <ng-include src="'/modules/header/header.html'"></ng-include>
+    <ng-include src="'/modules/photo-selector/photo-selector.html'"></ng-include>
     <ng-view></ng-view>
 </body>
 </html>
