--- a/modules/photo-selector/photo-selector.html
+++ b/modules/photo-selector/photo-selector.html
@@ -2,7 +2,7 @@
     <ul class="album-list">
         <li class="album-item" ng-repeat="album in albums">
             {{album.title}}
-            <img ng-src="{{album.sizes[0].src}}"/>
+            <img ng-src="{{album.sizes | photoSrc: 'm' }}"/>
         </li>
     </ul>
 </div>
