Add font icons. Some changes in structure

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>SocaSlide</title>
+    <base href="/">
     <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css"/>
-    <!--<script src="//vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>-->
     <script src="js/fakeApi.js"></script>
+    <!--<script src="//vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>-->
     <script src="js/main.js"></script>
 </head>
 <body>
-    <ng-include src="'/modules/header/header.html'"></ng-include>
-    <ng-include src="'/modules/photo-selector/photo-selector.html'"></ng-include>
+    <ng-include src="'modules/header/header.html'"></ng-include>
     <ng-view></ng-view>
 </body>
 </html>
