Add timeline. Remove unused vendors. Add parse script

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <body>
     <ng-include src="'modules/header/header.html'"></ng-include>
     <ng-view></ng-view>
+    <ng-include src="'modules/timeline/timeline.html'"></ng-include>
 </body>
 </html>
