--- a/modules/photo-selector/photos.html
+++ b/modules/photo-selector/photos.html
@@ -1,6 +1,6 @@
 <grid-size size="gridSize"></grid-size>
 <ul class="photo-list photo-list_size_{{gridSize}}">
-    <li class="photo-list__item" ng-repeat="photo in photos" title="{{photo.title}}">
+    <li class="photo-list__item" ng-class="{selected: photo.selected}" ng-repeat="photo in photos" title="{{photo.title}}" ng-click="togglePhoto(photo)">
         <img ng-src="{{photo.sizes | photoSrc: gridSize }}"/>
     </li>
 </ul>
