Main changes: add parse service

--- a/modules/timeline/timeline.html
+++ b/modules/timeline/timeline.html
@@ -4,5 +4,5 @@
             <img ng-src="{{frame.sizes | photoSrc: 'o' }}"/>
         </li>
     </ul>
-    <button class="create-slideshow"><i></i></button>
+    <button class="create-slideshow" ng-click="saveSlideshow"></button>
 </div>
