--- a/modules/timeline/timeline.html
+++ b/modules/timeline/timeline.html
@@ -1,8 +1,8 @@
 <div class="timeline" ng-controller="framesController">
     <ul class="frame-list">
-        <li class="frame-list__item" ng-repeat="frame in frames" title="{{frame.title}}" ng-click="removeFrame(frame)">
+        <li class="frame-list__item" ng-repeat="frame in frames track by frame.id" title="{{frame.title}}" ng-click="removeFrame(frame)">
             <img ng-src="{{frame.sizes | photoSrc: 'o' }}"/>
         </li>
     </ul>
-    <button class="create-slideshow" ng-click="saveSlideshow"></button>
+    <button class="create-slideshow" ng-click="saveSlideshow()"></button>
 </div>
