Add fullscreen click

--- a/modules/player/player.html
+++ b/modules/player/player.html
@@ -1,1 +1,3 @@
-<player-canvas images="images"></player-canvas>
+<div class="player" ng-click="fullScreen($event)">
+    <player-canvas images="images"></player-canvas>
+</div>
