--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <ng-include src="'modules/header/header.html'"></ng-include>
-    <ng-view></ng-view>
-    <ng-include src="'modules/timeline/timeline.html'"></ng-include>
+    <main app-view-segment="0"></main>
 </body>
 </html>
