--- a/modules/header/header.html
+++ b/modules/header/header.html
@@ -1,3 +1,3 @@
-<header class="header" layout="row" ng-controller="HeaderController">
-    <a href="/" class="logo">SocaSlide</a>
+<header class="header">
+    <a href="/" active-link="home" class="logo">SocaSlide</a>
 </header>
