Add audio selector

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <ng-include src="'modules/header/header.html'"></ng-include>
-    <main app-view-segment="0"></main>
+    <main class='main' app-view-segment="0"></main>
 </body>
 </html>
