--- a/modules/timeline/timeline.html
+++ b/modules/timeline/timeline.html
@@ -4,5 +4,11 @@
             <img ng-src="{{frame.sizes | photoSrc: 'o' }}"/>
         </li>
     </ul>
+    <ul class="timeline-audios">
+        <li class="timeline-audios__item" ng-repeat="audio in audios track by audio.id" title="{{audio.artist + ' - ' + audio.title}}">
+            <span class="timeline-audios__duration">{{audio.duration | timeFormatter}}</span>
+            <span class="timeline-audios__audio-name">{{audio.artist + ' - ' + audio.title}}</span>
+        </li>
+    </ul>
     <button class="create-slideshow" ng-click="saveSlideshow()"></button>
 </div>
