--- a/modules/player/player.html
+++ b/modules/player/player.html
@@ -1,4 +1,4 @@
-<div class="player" ng-click="fullScreen($event)">
-    <player-canvas images="images"></player-canvas>
-    <player-audio audios="audios"></player-audio>
+<div class="player">
+    <player-canvas></player-canvas>
+    <player-controls></player-controls>
 </div>
