--- a/modules/audio-selector/audio-selector.html
+++ b/modules/audio-selector/audio-selector.html
@@ -1,7 +1,7 @@
-<section class="audio-selector" ng-controller="AudiosController">
-    <header class="audio-selector__header">
-        <h2 class="audio-selector__title">Choice audio</h2>
-        <input type="text" ng-model="search" class="audio-filter"/>
+<section class="audio-selector section" ng-controller="AudiosController">
+    <header class="section__header">
+        <input type="text" ng-model="search" class="audio-selector__filter"/>
+        <h2 class="section__title">Choice audio</h2>
     </header>
     <ul class="audio-list">
         <li class="audio-list__item" ng-repeat="audio in audios | filter:search track by audio.id" title="{{audio.artist + '-' + audio.title}}" ng-click="toggleAudio(audio)">
