--- a/modules/photo-selector/photos.html
+++ b/modules/photo-selector/photos.html
@@ -1,6 +1,11 @@
-<grid-size size="gridSize"></grid-size>
-<ul class="photo-list photo-list_size_{{gridSize}}">
-    <li class="photo-list__item" ng-class="{selected: photo.selected}" ng-repeat="photo in photos track by photo.id" title="{{photo.title}}" ng-click="togglePhoto(photo)">
-        <img ng-src="{{photo.sizes | photoSrc: gridSize }}"/>
-    </li>
-</ul>
+<header class="section__header">
+    <grid-size size="gridSize"></grid-size>
+    <h2 class="section__title">{{album.title}}</h2>
+</header>
+<div class="section__content">
+    <ul class="photo-list photo-list_size_{{gridSize}}">
+        <li class="photo-list__item" ng-class="{selected: photo.selected}" ng-repeat="photo in photos track by photo.id" title="{{photo.title}}" ng-click="togglePhoto(photo)">
+            <img ng-src="{{photo.sizes | photoSrc: gridSize }}"/>
+        </li>
+    </ul>
+</div>
