--- a/modules/player/directives/player-controls/player-controls.html
+++ b/modules/player/directives/player-controls/player-controls.html
@@ -1,3 +1,4 @@
 <button ng-click="play()">play</button>
 <button ng-click="pause()">pause</button>
 <button ng-click="stop()">stop</button>
+<input type="text" ng-model="volume" ng-blur="setVolume(volume / 100)"/>
