Add tooltip directive. Work with styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>SocaSlide</title>
-    <base href="/">
     <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css"/>
     <script src="js/fakeApi.js"></script>
@@ -13,5 +12,6 @@
 <body>
     <ng-include src="'modules/header/header.html'"></ng-include>
     <main class='main' app-view-segment="0"></main>
+    <tooltip-popup></tooltip-popup>
 </body>
 </html>
