--- a/modules/header/header.html
+++ b/modules/header/header.html
@@ -1,3 +1,4 @@
 <header class="header">
-    <a href="/" active-link="home" class="logo">SocaSlide</a>
+    <a href="/#/" active-link="home" class="logo">SocaSlide</a>
+    <breadcrumbs></breadcrumbs>
 </header>
