--- a/pages/create-page/create-page.html
+++ b/pages/create-page/create-page.html
@@ -1,5 +1,5 @@
 <section class="create-section">
     <ng-include src="'modules/audio-selector/audio-selector.html'"></ng-include>
     <section class="section" app-view-segment="1"></section>
-    <ng-include src="'modules/timeline/timeline.html'"></ng-include>
+    <panel></panel>
 </section>
