Add dialog module. Add settings module. Work on styles

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <ng-include src="'modules/header/header.html'"></ng-include>
     <main class='main' app-view-segment="0"></main>
     <tooltip-popup></tooltip-popup>
+    <dialog></dialog>
 </body>
 </html>
