--- a/modules/panel/directives/audio-list/audio-list.html
+++ b/modules/panel/directives/audio-list/audio-list.html
@@ -1,6 +1,5 @@
 <ul class="panel-audios">
     <li class="panel-audios__item" ng-repeat="audio in audios track by audio.id" title="{{audio.artist + ' - ' + audio.title}}">
-        <span class="panel-audios__duration">{{audio.duration | timeFormatter}}</span>
-        <span class="panel-audios__audio-name">{{audio.artist + ' - ' + audio.title}}</span>
+        <span class="panel-audios__info">{{audio.artist + ' - ' + audio.title}}&nbsp;&nbsp;&nbsp;{{audio.duration | timeFormatter}}</span>
     </li>
 </ul>
