Add player modal Remove player page Work with interface and styles

--- a/modules/dialog/dialog.html
+++ b/modules/dialog/dialog.html
@@ -1,1 +1,1 @@
-<div class="dialog-holder" ng-show="dialogService.showed" ng-include="dialogService.data.template"></div>
+<div class="dialog-holder" ng-show="dialogService.showed" ng-include="dialogService.data.template" ng-click="closeOnBgClick($event)"></div>
