Add slideshow page. Now we have link to slideshow; Slideshow saved with author (vk user id)

--- a/modules/header/header.html
+++ b/modules/header/header.html
@@ -1,4 +1,4 @@
 <header class="header">
-    <a href="/#/" active-link="home" class="logo">SocaSlide</a>
+    <a href="#/home" active-link="home" class="logo">SocaSlide</a>
     <breadcrumbs></breadcrumbs>
 </header>
