--- a/modules/panel/panel.html
+++ b/modules/panel/panel.html
@@ -6,7 +6,7 @@
         <audio-list class="panel__info-row"></audio-list>
     </div>
     <div class="panel__btns">
-        <button class="create-slideshow" ng-click="saveSlideshow()"></button>
+        <button class="create-slideshow" ng-click="preview()"></button>
         <button class="open-settings" ng-click="openSettings()"></button>
     </div>
 </div>
