--- a/modules/photo-selector/albums.html
+++ b/modules/photo-selector/albums.html
@@ -6,7 +6,7 @@
     <ul class="album-list album-list_size_{{gridSize}}">
         <li class="album-list__item" data-ng-repeat="album in albums track by album.id">
             <img ng-src="{{album.sizes | photoSrc: gridSize }}"/>
-            <span class="album-list__item-title">{{album.title}}</span>
+            <span class="album-list__item-title" title="{{album.title}}">{{album.title}}</span>
             <div class="album-list__buttons">
                 <a href="#/create/albums/{{album.id}}" class="album-list__button album-list__button_open" title="Открыть"></a>
                 <button class="album-list__button album-list__button_add" ng-click="add(album)" title="Добавить весь альбом"></button>
