--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>SocaSlide</title>
     <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css"/>
-    <script src="js/fakeApi.js"></script>
-    <!--<script src="//vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>-->
+    <script src="//vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
