--- a/modules/player-modal/player-modal.html
+++ b/modules/player-modal/player-modal.html
@@ -1,4 +1,7 @@
 <section class="dialog">
     <button class="dialog__close dialog__close_video" ng-click="dialogService.close()"></button>
-    <player src="{{dialogService.data.id}}"></player>
+    <player src="{{dialogService.data.src}}"></player>
+    <div ng-controller="PlayerModalController">
+        <button class="button" ng-click="saveSlideshow()">Сохранить</button>
+    </div>
 </section>
