--- a/modules/player/directives/player-controls/player-controls.html
+++ b/modules/player/directives/player-controls/player-controls.html
@@ -1,4 +1,5 @@
 <div class="controls" ng-class="{controls_paused: !played}">
     <button ng-click="toggle()" class="controls__toggle" ng-class="{controls__toggle_pause: played}"></button>
     <input type="text" ng-model="volume" ng-click="setVolume(volume / 100)"/>
+    <button ng-click="fullScreen()" class="controls__full-screen"></button>
 </div>
