--- a/modules/panel/panel.html
+++ b/modules/panel/panel.html
@@ -2,7 +2,7 @@
     <frame-list></frame-list>
     <div class="panel__info">
         <div class="panel__photo-count panel__info-row">{{selectedPhotos.size()}}</div>
-        <div class="panel__duration panel__info-row">{{ (selectedPhotos.size() * settings.slideDuration) | timeFormatter}}</div>
+        <div class="panel__duration panel__info-row">{{ duration() | timeFormatter:'ms' }}</div>
         <audio-list class="panel__info-row"></audio-list>
     </div>
     <div class="panel__btns">
