Add slideshow sharing functionality Add user name to header Add autoplay Fix fullscreen Add delete slideshow functionality

--- a/modules/header/header.html
+++ b/modules/header/header.html
@@ -1,4 +1,9 @@
-<header class="header">
+<header class="header" ng-controller="HeaderController">
     <a href="#/home" active-link="home" class="logo">SocaSlide</a>
     <breadcrumbs></breadcrumbs>
+    <div class="header__user">
+        {{firstName}}
+        {{lastName}}
+    </div>
+    <a href="#/slideshow/{{slideshow.id}}" ng-repeat="slideshow in slideshows" style="margin-right: 10px;">{{slideshow.get('title') || 'hi'}}</a>
 </header>
