--- a/modules/player/directives/player-controls/player-controls.html
+++ b/modules/player/directives/player-controls/player-controls.html
@@ -1,6 +1,6 @@
 <div class="controls" ng-class="{controls_paused: !played}">
     <button ng-click="toggle()" class="controls__toggle" ng-class="{controls__toggle_pause: played}"></button>
-    <button ng-click="fullScreen()" class="controls__full-screen"></button>
+    <button ng-click="toggleFullScreen()" class="controls__full-screen" ng-class="{active: fullScreenActive()}"></button>
     <input class="controls__volume" type="range" ng-model="volume" min="0" max="100" ng-change="setVolume()"/>
     <div class="controls__progress-holder">
         <input type="range" class="controls__progress" min="0" max="{{duration}}" ng-model="currentTime" ng-change="rewind()" ng-mousedown="rewindStart()" ng-mouseup="rewindEnd()"/>
