--- a/modules/slideshow-list/slideshow-list.html
+++ b/modules/slideshow-list/slideshow-list.html
@@ -14,5 +14,5 @@
             </div>
         </li>
     </ul>
-    <div ng-if="slideshows && !slideshows.length" class="wrapper"><br/><br/>Вы пока еще не создали ни 1 слайдшоу. <a href="#/create/">Создать мое первое слайдшоу</a></div>
+    <div ng-if="slideshows && !slideshows.length" class="wrapper"><br/><br/>Вы пока еще не создали ни 1 слайдшоу. <a href="#/create">Создать мое первое слайдшоу</a></div>
 </div>
