--- a/modules/player/player.html
+++ b/modules/player/player.html
@@ -1,4 +1,5 @@
-<div class="player" ng-mousemove="resetActivity()" ng-class="{'player_no-activity': noActivity, 'player_rewind-started': rewindStarted}">
+<div class="player" ng-mousemove="resetActivity()" ng-class="{'player_no-activity': noActivity, 'player_rewind-started': rewindStarted, 'player_loaded': loaded}">
     <player-canvas></player-canvas>
-    <player-controls autoplay="{{autoplay}}" toggle-full-screen="toggleFullScreen()" duration="{{duration}}" no-activity="noActivity" rewind-started="rewindStarted"></player-controls>
+    <player-controls can-play="canPlay" autoplay="{{autoplay}}" toggle-full-screen="toggleFullScreen()" duration="{{duration}}" no-activity="noActivity" rewind-started="rewindStarted"></player-controls>
+    <span class="player__load-progress" ng-style="{width: loadProgress + '%'}">{{loadProgress}}</span>
 </div>
