fix autoplay (wait for canPlay)

--- a/modules/preview-modal/preview-modal.html
+++ b/modules/preview-modal/preview-modal.html
@@ -1,6 +1,6 @@
 <section class="dialog">
     <button class="dialog__close dialog__close_video" ng-click="dialogService.close()"></button>
-    <player src="local"></player>
+    <player src="local" autoplay></player>
     <form class="preview-modal__content" ng-submit="saveSlideshow()" ng-controller="PreviewModalController">
         <div class="form-row">
             <label class="label" for="slideshowTitle">Заголовок</label>
