add autoplay in player modal

--- a/modules/player-modal/player-modal.html
+++ b/modules/player-modal/player-modal.html
@@ -1,4 +1,4 @@
 <section class="dialog">
     <button class="dialog__close dialog__close_video" ng-click="dialogService.close()"></button>
-    <player src="{{dialogService.data.src}}"></player>
+    <player src="{{dialogService.data.src}}" autoplay></player>
 </section>
